# Primes

./: .clang-format  CMakeLists.txt  Distribution.ods  Modulo.ods  README.md  SieveV2Algorithm.ods  main.cpp  primes.h
c/: CMakeLists.txt  bitmap.c  bitmap.h  main.c  primes.c  primes.h
cpp/: .gitignore  CMakeLists.txt  Primes.cpp  Primes.h  main.cpp  primes.cpp  primes.hpp
julia/: primes.jl
python/: primes.py
rust/: Cargo.toml
rust/src/: main.rs
